# motioninocean

./: .dockerignore  .editorconfig  .env  .env.example  .env.test  .eslintignore  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  .prettierignore  AGENTS.md  API.md  API_TEST_MODE_TESTING_REPORT.md  BASE_URL_AUTO_DETECTION_IMPROVEMENT.patch  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIG_TAB_USABILITY_REPORT.md  CONTRIBUTING.md  CROSS_CONTAINER_TESTING_GUIDE.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  ENVIRONMENT_VARIABLES_DOCUMENTATION_COMPLETE.md  FAILING_TESTS_ANALYSIS.md  FEATURE_FLAGS.md  MIGRATION.md  Makefile  PRD-backend.md  PRD-frontend.md  PRD.md  README.md  RELEASE.md  SECURITY.md  TESTING_COMPLETE.md  TEST_DOCUMENTATION_INDEX.md  TEST_PARALLEL_CONTAINERS.md  TEST_REFACTORING_SUMMARY.md  TEST_REPORT.md  TEST_RESULTS_EXECUTIVE_SUMMARY.md  audit-template.js  (+39 more)
.github/: BRANCH_PROTECTION.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/skills/: README.md
.github/skills/_template/: SKILL.md
.github/skills/ci-quality-gates/: SKILL.md
.github/skills/ci-triage/: SKILL.md
.github/skills/contributor-workflow/: SKILL.md
.github/skills/mermaid-creator/: SKILL.md
.github/skills/pi-camera-troubleshooting/: SKILL.md
.github/skills/release-operator/: SKILL.md
.github/skills/release-publish/: SKILL.md
.github/skills/ui-playwright/: README.md  (+1 more)
.github/workflows/: ci.yml  docker-publish.yml  nightly-autofix.yml  security-scan.yml  test.yml
.playwright-cli/: page-2026-02-24T22-43-25-900Z.yml  page-2026-02-24T22-43-40-496Z.yml  page-2026-02-24T22-43-45-708Z.yml  page-2026-02-24T22-43-52-034Z.yml  page-2026-02-24T22-43-57-617Z.yml  page-2026-02-24T22-43-59-920Z.yml  page-2026-02-24T22-44-05-305Z.yml  page-2026-02-24T22-44-07-665Z.yml  page-2026-02-24T22-44-08-928Z.yml  page-2026-02-24T22-47-30-858Z.yml  page-2026-02-24T22-47-39-391Z.yml  page-2026-02-24T22-47-42-344Z.yml  page-2026-02-24T22-47-48-891Z.yml  page-2026-02-24T22-47-51-193Z.yml  page-2026-02-24T22-47-52-780Z.yml  page-2026-02-24T22-47-55-990Z.yml
containers/: README-RUNTIME-SETTINGS.md  README.md
containers/motion-in-ocean-management/: .env.example  docker-compose.yaml  docker-compose.yml
containers/motion-in-ocean-webcam/: .env.example  docker-compose.cat-gif.yaml  docker-compose.cat-gif.yml  docker-compose.hardened.yaml  docker-compose.mock.yaml  docker-compose.yaml  docker-compose.yml
containers/motion-iocean-management/: .env.example  docker-compose.yml
containers/motioniocean-management/: .env.example  docker-compose.yml
containers/motioniocean-webcam/: .env.example  docker-compose.hardened.yml  docker-compose.mock.yml  docker-compose.yml
containers/shared/: .gitkeep
design/: frontend-design-guidance.md  management-dashboard-dark-gap-report.md  management-dashboard.pen  webcam-layout.pen
design/mio/: mio_avatar.pxd
docs/: CHANGELOG.md  DOCUMENTATION_GUIDE.md  ENVIRONMENT_VARIABLES_DOCUMENTATION_COMPLETE.md  README.md  conf.py  index.rst  openapi.yaml
docs/guides/: DEPLOYMENT.md  FEATURE_FLAGS.md  MIGRATION.md  RELEASE.md
docs/modules/: configuration.rst  discovery.rst  main.rst  management_api.rst  modes_webcam.rst
docs/product/: PRD-backend.md  PRD-core.md  PRD-frontend.md
docs/reports/: API_TEST_MODE_TESTING_REPORT.md  CONFIG_TAB_USABILITY_REPORT.md  CROSS_CONTAINER_TESTING_GUIDE.md  TEST_DOCUMENTATION_INDEX.md  TEST_PARALLEL_CONTAINERS.md  live-webcam-ui-audit-2026-02-24.md  management-dashboard-implementability-audit.md  webcam-layout-implementability-audit.md
docs/testing/: README.md
pi_camera_in_docker/: __init__.py  application_settings.py  banner.py  cat_gif_generator.py  changelog_api.py  config_validator.py  discovery.py  feature_flag_usage_check.py  feature_flags.py  logging_config.py  main.py  management_api.py  mock_stream_renderer.py  node_registry.py  runtime_config.py  sentry_config.py  settings_api.py  settings_schema.py  shared.py  structured_logging.py  transport_url_validation.py  version_info.py
pi_camera_in_docker/modes/: __init__.py  webcam.py
pi_camera_in_docker/templates/: index.html  management.html
scripts/: detect-devices.sh  docker-entrypoint.sh  healthcheck.py  migrate_node_registry_auth.py  test-docker-optimization.sh  validate-stack.py
test_env/: pyvenv.cfg
tests/: conftest.py  test_application_settings.py  test_cat_gif_generator.py  test_changelog_api_integration.py  test_concurrency.py  test_config.py  test_discovery.py  test_discovery_integration.py  test_feature_flags.py  test_feature_flags_docs.py  test_integration.py  test_management_api.py  test_management_mode.py  test_mock_stream_renderer.py  test_node_registry.py  test_openapi.py  test_parallel_containers.py  test_phase1_components.py  test_pykms_import.py  test_runtime_config.py  test_sentry.py  test_transport_url_validation.py  test_units.py
tests/frontend/: clear-config-display.test.mjs  config-refresh.test.mjs  management-diagnostic-clipboard.test.mjs  management-diagnostic-severity.test.mjs  management-dom-contract.test.mjs  management-panel-collapse.test.mjs  management-refresh-button-interval.test.mjs  management-refresh-overlap.test.mjs  management-status-race-delete.test.mjs  management-status-reasons.test.mjs  polling-mode.test.mjs  settings-changes-summary-model.test.mjs  settings-render-hydration.test.mjs  webcam-help-modal.test.mjs  webcam-mascot.test.mjs  webcam-mock-placeholder.test.mjs  webcam-theme.test.mjs
tests/integration/: test_help_readme_endpoint.py  test_integration.py  test_metrics_stream_auth.py  test_version_endpoints.py  test_webcam_rate_limits.py
tests/ui/: management-refresh-recovery.spec.mjs  management-status-display.spec.mjs  webcam-changelog-modal.spec.mjs  webcam-help-modal.spec.mjs  webcam-mock-placeholder-bounds.spec.mjs  webcam-rail-layout-theme.spec.mjs
tests/unit/: test_banner.py  test_changelog_api.py  test_config.py  test_config_validator.py  test_flask_routes.py  test_node_registry_corruption.py  test_pykms_import.py  test_runtime_config_target_fps.py
(+15 files in other folders)
