[project]
name = "pi-camera-in-docker"
version = "1.1.0"
description = "Docker-first Raspberry Pi CSI camera streaming solution"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.ruff]
# Set target Python version
target-version = "py39"

# Set the line length limit
line-length = 100

# Exclude common directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    "node_modules",
]

[tool.ruff.lint]
# Enable additional rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # flake8-eradicate
    "PL",  # pylint
    "TRY", # tryceratops
    "RUF", # ruff-specific rules
]

# Ignore specific rules that conflict with the project's style
ignore = [
    "E501",    # Line too long (handled by formatter)
    "ISC001",  # Implicit string concatenation (conflicts with formatter)
    "E402",    # Module level import not at top (needed for pykms workaround)
    "PLR2004", # Magic value used in comparison (config values are self-documenting)
    "UP006",   # Use lowercase for type annotations (keeping Tuple/Dict for Python 3.9 compat)
    "UP035",   # typing.X deprecated (keeping for Python 3.9 compat)
    "TRY400",  # Use logging.exception (explicit error logging is clearer in this context)
    "RUF001",  # Ambiguous unicode character (intentional emoji for log levels)
    "TRY301",  # Abstract `raise` to an inner function (unnecessary complexity)
    "PLR0915", # Too many statements
    "PLR0912", # Too many branches
    "PLR0911", # Too many return statements
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Auto-detect line ending
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in test files
"test_*.py" = ["ARG", "PLR2004", "S101", "PT006", "PTH123", "PLC0415", "EM", "TRY003"]
"tests/*.py" = ["ARG", "PLR2004", "S101", "PT006", "PTH123", "PLC0415", "PT017", "PT015", "B011", "EM", "TRY003", "PLR0913", "F841"]
"pi_camera_in_docker/management_api.py" = ["PLR0915", "PLR0911", "PLR0913", "TRY300"]
"pi_camera_in_docker/cat_gif_generator.py" = ["PLR0913"]
"pi_camera_in_docker/discovery.py" = ["PLR0913"]
"pi_camera_in_docker/modes/webcam.py" = ["PLC0415"]
"scripts/migrate_node_registry_auth.py" = ["T201"]
"scripts/validate-stack.py" = ["T201", "PLC0415", "F401", "ICN001", "TRY300", "RET505"]

[tool.ruff.lint.isort]
# Organize imports
known-first-party = ["pi_camera_in_docker"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pylint]
# Set max complexity for functions
max-branches = 15
max-statements = 50

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=pi_camera_in_docker",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
# Coverage configuration
source = ["pi_camera_in_docker"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
# Coverage reporting
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
# Bandit security linter configuration
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "node_modules",
]
skips = [
    "B101",  # assert_used - used in tests
]
